# pytorch-module

./: .gitignore  README.md  pyproject.toml
scripts/: download_food_data.py
src/: config.py  data_builder.py  engine.py  model_builder.py  train.py  utils.py
